# Bot-Discord

./: .gitignore  README.md  ascii.txt  cogs_loader.py  logs_generator.py  main.py  pyproject.toml  requirements.txt
cogs/commands/: apis_commands.py  command_help.py  fun_commands.py  general.py  ia_commands.py
cogs/events/: message_events.py
